# website

./: .gitignore  LICENSE  cabal.project.freeze  justfile  package-lock.json  package.json  tailwind.config.js  website.cabal
app/: Main.hs
data/: lorem-ipsum.md
src/: Server.hs
static/: screen.css
static/css/: .gitignore
