cabal-version:      3.4
name:               website
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
-- author:
-- maintainer:
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Server
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , servant
                    , lucid
                    , servant-lucid
                    , servant-server
                    , servant-static-th
    hs-source-dirs:   src
    default-language: GHC2024

executable website
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.20.0.0
                    , website
                    , servant-server
                    , wai
                    , warp

    hs-source-dirs:   app
    default-language: GHC2024

test-suite website-test
    import:           warnings
    default-language: GHC2024
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.20.0.0,
        website
